--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="container">
   <div class="header">
     <h1>Riley DuBord</h1>
   </div>
@@ -67,6 +68,7 @@
       <li>Perform janitorial duties after every event that consist of cleaning all bathrooms and dressing rooms</li>
     </ul>
   </div>
-      
+  </div>  
+    
 </body>
 </html>
