--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <li>Perform janitorial duties after every event that consist of cleaning all bathrooms and dressing rooms</li>
     </ul>
   </div>
+    <div class="references">
+      <h2> References </h2>
+      Joseph Brunner: <a href="joseph@mezzalunafargo.com">joseph@mezzalunafargo.com</a></p>
+      Lauren Nelson: <a href="lauren@purplehat.rocks">lauren@purplehat.rocks</a></p>
+    </div>
   </div>  
     
 </body>
