--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   </div>
     <div class="references">
       <h2> References </h2>
-      Joseph Brunner: <a href="joseph@mezzalunafargo.com">joseph@mezzalunafargo.com</a></p>
-      Lauren Nelson: <a href="lauren@purplehat.rocks">lauren@purplehat.rocks</a></p>
+      Joseph Brunner: <a href="mailto:joseph@mezzalunafargo.com">joseph@mezzalunafargo.com</a></p>
+      Lauren Nelson: <a href="mailto:lauren@purplehat.rocks">lauren@purplehat.rocks</a></p>
     </div>
   </div>  
     
